// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Layout/Spacer/Vertical ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="spacer vertical"
    style="height: 0px;"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Layout/Spacer/Vertical ] should render Sizes 1`] = `
<DocumentFragment>
  <div
    class="spacer vertical"
    style="height: 0px;"
  />
  <div
    class="spacer vertical"
    style="height: 5px;"
  />
  <div
    class="spacer vertical"
    style="height: 15px;"
  />
  <div
    class="spacer vertical"
    style="height: 20px;"
  />
  <div
    class="spacer vertical"
    style="height: 40px;"
  />
</DocumentFragment>
`;
